--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+   
+   <!DOCTYPE html>
+   <html lang="en">
+   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    <form action="/user/Admin" method="post" enctype="multipart/form-data">
+   </head>
+   <body>
+       <form action="/user/addItem" method="post" >
   
-  <input type="file" name="image" accept="image/*" required>
   <input type="text" name="name" placeholder="Product Name" required>
   <input type="number" name="price" placeholder="Product Price" required>
   <input type="text" name="description" placeholder="Product Description" required>
   <button type="submit">Submit</button>
 </form>
 
-</body>
-</html>
+   </body>
+   </html>
+   
